--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^7.2.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.5"
   },
   "devDependencies": {},
   "scripts": {
